# software-rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: cli.cpp  cli.h  framebuffer.cpp  framebuffer.h  main.cpp  mesh.h
